added detail page (basically finished front-end)

--- a/app.json
+++ b/app.json
@@ -2,8 +2,7 @@
   "pages":[
     "pages/browse/index",
     "pages/rate/index",
-    "pages/index/index",
-    "pages/logs/logs"
+    "pages/detail/index"
   ],
   "window":{
     "backgroundTextStyle":"light",
