--- a/app.json
+++ b/app.json
@@ -9,5 +9,18 @@
     "navigationBarBackgroundColor": "#fff",
     "navigationBarTitleText": "WeChat",
     "navigationBarTextStyle":"black"
+  },
+  "tabBar": {
+    "list": [{
+      "pagePath": "pages/browse/index",
+      "text": "浏览",
+      "iconPath": "image/icon_component.png",
+      "selectedIconPath": "image/icon_component_HL.png"
+    }, {
+      "pagePath": "pages/rate/index",
+      "text": "点评",
+      "iconPath": "image/icon_API.png",
+      "selectedIconPath": "image/icon_API_HL.png"
+    }]
   }
 }
