--- a/app.json
+++ b/app.json
@@ -5,10 +5,11 @@
     "pages/detail/index"
   ],
   "window":{
-    "backgroundTextStyle":"light",
+    "backgroundTextStyle":"dark",
     "navigationBarBackgroundColor": "#fff",
     "navigationBarTitleText": "WeChat",
-    "navigationBarTextStyle":"black"
+    "navigationBarTextStyle":"black",
+    "enablePullDownRefresh":"true"
   },
   "tabBar": {
     "list": [{
